see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

26-Apr-2011 Jean-Marie Simonet
 $ [#25742] SPACERDROP_LABEL too long for a label. Thanks Paulo.
 # [#25753] Hathor bugs with batch function. Thanks Dennis.
 $ [#25723] I can't remove script,applet,iframe form tinyMCE blacklist. Thanks Bill.

 25-Apr-2011 Jean-Marie Simonet
 #$ Updating ta-IN installation language
 # [#25739] Batch actions for articles. Thanks Dennis.

23-Apr-2011 Jean-Marie Simonet
 #$ [#25724] *Improving the langswitcher module, correcting some ini strings
 # [#25717] *If plugin language filter is enabled a contact with linked user shows articles in all languages instead of filtered for current language. Thanks Marcel and Dennis.
 # [#25725] You can delete the default template style. Thanks Elin.
 
22-Apr-2011 Jean-Marie Simonet
 # [#25722] *Displaying status of Content languages Default Home page in Manager.

-------------------- 1.6.3 Stable Release [18-Apr-2011] ------------------

18-Apr-2011 Mark Dexter
 # [#25661] *Redirect not now fully editable
 # [#25657] Mootools no longer loaded in backend
 # [#25688] Updates sites never re-enabled after being disabled

16-Apr-2011 Jean-Marie Simonet
 $ Updating es-ES installation file
 # [#25650] Can't insert image for menu item. Thanks Dennis and Rouven
 
15-Apr-2011 Jean-Marie Simonet
 # Removing install check

-------------------- 1.6.2 Stable Release [14-Apr-2011] ------------------

14-Apr-2011
 # [#25617] performance of assets table query with > 40 articles on website in registered mode

13-Apr-2011 Jean-Marie Simonet
 # Correcting error in the plugin language filter xml
 
12-Apr-2011 Mark Dexter