@@ -171,15 +171,7 @@ $doc->addScript($this->baseurl.'/templates/beez_20/javascript/md_stylechanger.js
                                                         </div>
                                                 <?php endif; ?>
 
-                                                <?php if ($this->getBuffer('message')) : ?>
-                                                        <div class="error">
-                                                                <h2>
-                                                                        <?php echo JText::_('JNOTICE'); ?>
-                                                                </h2>
-                                                                <jdoc:include type="message" />
-                                                        </div>
-                                                <?php endif; ?>
-
+                                                        <jdoc:include type="message" />
                                                         <jdoc:include type="component" />
 
                                                 </div><!-- end main -->
