@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+27-Apr-2011 Jean-Marie Simonet
+ # [#25759] Broken system messages in beez_20 and beez5. Thanks Dennis.
+ 
 26-Apr-2011 Jean-Marie Simonet
  $ [#25742] SPACERDROP_LABEL too long for a label. Thanks Paulo.
  # [#25753] Hathor bugs with batch function. Thanks Dennis.
